--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 PROJECT(IGPROF C CXX)
-CMAKE_MINIMUM_REQUIRED(VERSION 2.4.6)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 # Options.
 OPTION(IGPROF_BUILD_TESTS "Build tests." OFF)
@@ -29,8 +29,24 @@ IF(UNIX)
   SET(IGPROF_LIBS ${IGPROF_LIBS} ${CMAKE_DL_LIBS})
 ENDIF()
 
+IF(${CMAKE_SYSTEM_PROCESSOR} MATCHES 64)
+  FIND_PATH(UNWIND_INCLUDE_DIR libunwind.h)
+  FIND_LIBRARY(UNWIND_LIBRARY NAMES unwind)
+ENDIF()
+
+FIND_PATH(CLASSLIB_INCLUDE_DIR classlib/sysapi/system.h)
+FIND_LIBRARY(CLASSLIB_LIBRARY NAMES classlib)
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES Linux)
+  SET(CLASSLIB_LIBDEPS -lrt)
+ENDIF()
+
+IF(NOT IGPROF_STANDALONE_CLASSLIB)
+  SET(CLASSLIB_LIBDEPS ${CLASSLIB_LIBDEPS} -lpcre -lz -lbz2)
+ENDIF()
+
 # Build targets.
-INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${UNWIND_INCLUDE_DIR} ${CLASSLIB_INCLUDE_DIR})
 ADD_LIBRARY(igprof SHARED
             src/IgHook.cc
             src/IgHookTrace.cc
@@ -45,9 +61,9 @@ ADD_LIBRARY(igprof SHARED
             src/IgTraceMem.cc
             src/IgTraceMMap.cc
             src/IgTraceThrow.cc)
-TARGET_LINK_LIBRARIES(igprof ${IGPROF_LIBS} unwind)
+TARGET_LINK_LIBRARIES(igprof ${IGPROF_LIBS} ${UNWIND_LIBRARY})
 ADD_EXECUTABLE(igprof-analyse src/IgProfAnalyse.cc)
-TARGET_LINK_LIBRARIES(igprof-analyse classlib ${CMAKE_DL_LIBS} -lpcre -lz -lbz2 -lrt)
+TARGET_LINK_LIBRARIES(igprof-analyse ${CLASSLIB_LIBRARY} ${CMAKE_DL_LIBS} ${CLASSLIB_LIBDEPS})
 INSTALL(TARGETS igprof igprof-analyse
 	RUNTIME DESTINATION bin
 	LIBRARY DESTINATION lib
