--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,19 +34,8 @@ IF(${CMAKE_SYSTEM_PROCESSOR} MATCHES 64)
   FIND_LIBRARY(UNWIND_LIBRARY NAMES unwind)
 ENDIF()
 
-FIND_PATH(CLASSLIB_INCLUDE_DIR classlib/sysapi/system.h)
-FIND_LIBRARY(CLASSLIB_LIBRARY NAMES classlib)
-
-IF(${CMAKE_SYSTEM_NAME} MATCHES Linux)
-  SET(CLASSLIB_LIBDEPS -lrt)
-ENDIF()
-
-IF(NOT IGPROF_STANDALONE_CLASSLIB)
-  SET(CLASSLIB_LIBDEPS ${CLASSLIB_LIBDEPS} -lpcre -lz -lbz2)
-ENDIF()
-
 # Build targets.
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${UNWIND_INCLUDE_DIR} ${CLASSLIB_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${UNWIND_INCLUDE_DIR})
 ADD_LIBRARY(igprof SHARED
             src/IgHook.cc
             src/IgHookTrace.cc
@@ -63,7 +52,7 @@ ADD_LIBRARY(igprof SHARED
             src/IgTraceThrow.cc)
 TARGET_LINK_LIBRARIES(igprof ${IGPROF_LIBS} ${UNWIND_LIBRARY})
 ADD_EXECUTABLE(igprof-analyse src/IgProfAnalyse.cc)
-TARGET_LINK_LIBRARIES(igprof-analyse ${CLASSLIB_LIBRARY} ${CMAKE_DL_LIBS} ${CLASSLIB_LIBDEPS})
+TARGET_LINK_LIBRARIES(igprof-analyse ${CMAKE_DL_LIBS})
 INSTALL(TARGETS igprof igprof-analyse
 	RUNTIME DESTINATION bin
 	LIBRARY DESTINATION lib
