Add ability to profile clock cycles spent in alloc and free.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ ADD_LIBRARY(igprof SHARED
             src/profile-mem.cc
             src/profile-perf.cc
             src/profile-trace.cc
+            src/profile-calls.cc
             src/trace.cc
             src/trace-mem.cc
             src/trace-mmap.cc
