--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ ADD_LIBRARY(igprof SHARED
             src/profile-perf.cc
             src/profile-trace.cc
             src/profile-calls.cc
+            src/profile-finstrument.cc
             src/trace.cc
             src/trace-mem.cc
             src/trace-mmap.cc
