--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ ENDIF()
 # Flags we need.
 ADD_DEFINITIONS(-D__STDC_FORMAT_MACROS)
 ADD_DEFINITIONS(-D__STDC_LIMIT_MACROS)
+ADD_DEFINITIONS(-DDEBUG)
 IF(${CMAKE_SYSTEM_NAME} MATCHES Linux)
   ADD_DEFINITIONS(-D_GNU_SOURCE)
   SET(CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_INIT} -Wl,-z,nodefs
@@ -25,7 +26,7 @@ ENDIF()
 SET(CMAKE_C_FLAGS "${CMAKE_ANSI_FLAGS} ${CMAKE_C_FLAGS}")
 SET(CMAKE_REQUIRED_FLAGS ${CMAKE_ANSI_FLAGS})
 IF(CMAKE_COMPILER_IS_GNUCC)
-  ADD_DEFINITIONS(-ansi -pedantic -W -Wall -Wno-long-long -Werror)
+  ADD_DEFINITIONS(-ansi -pedantic -W -Wall -Wno-long-long)
 ENDIF()
 
 IF(UNIX)
