igprof_analyse -mr REGEXP option activated if libpcre can be found.
EDIT: die function after pcre_compile was not printing anything.
      Replaced it with std::cerr << Error... call and exit(1);

      in replace function replace.clear() to clear the replace string
      which fix the bug when there were more than one regexp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,30 @@ PROJECT(IGPROF C CXX)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 FIND_PACKAGE(Threads)
 
+#Find PCRE library
+IF(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
+  SET(PCRE_FOUND TRUE)
+ELSE(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
+
+  FIND_PATH(PCRE_INCLUDE_DIR NAMES pcre.h
+            PATHS /usr/include /usr/local/include)
+
+  FIND_LIBRARY(PCRE_LIBRARY NAMES pcre
+               PATHS /usr/lib /usr/local/lib)
+
+  SET(PCRE_LIBRARIES ${PCRE_LIBRARY})
+
+  IF(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
+    SET(PCRE_FOUND BOOL TRUE)
+  ELSE(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
+    SET(PCRE_FOUND BOOL FALSE)
+  ENDIF(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
+
+ENDIF(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
+
+CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/config.h.cmake
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/config.h)
+
 # Options.
 OPTION(IGPROF_BUILD_TESTS "Build tests." OFF)
 
@@ -54,7 +78,12 @@ INSTALL(FILES igprof-book
 ENDIF()
 
 # Build targets.
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${UNWIND_INCLUDE_DIR})
+IF(PCRE_FOUND)
+  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${UNWIND_INCLUDE_DIR}
+                      ${PCRE_INCLUDE_DIR})
+ELSE()
+  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${UNWIND_INCLUDE_DIR})
+ENDIF()
 ADD_LIBRARY(igprof SHARED
             src/hook.cc
             src/buffer.cc
@@ -74,7 +103,11 @@ ADD_LIBRARY(igprof SHARED
 #SET_TARGET_PROPERTIES(igprof PROPERTIES LINK_FLAGS -Wl,-z,nodefs)
 TARGET_LINK_LIBRARIES(igprof ${UNWIND_LIBRARY} ${IGPROF_LIBS} ${CMAKE_THREAD_LIBS_INIT})
 ADD_EXECUTABLE(igprof-analyse src/analyse.cc)
-TARGET_LINK_LIBRARIES(igprof-analyse ${CMAKE_DL_LIBS})
+IF(PCRE_FOUND)
+  TARGET_LINK_LIBRARIES(igprof-analyse ${CMAKE_DL_LIBS} ${PCRE_LIBRARIES})
+ELSE()
+  TARGET_LINK_LIBRARIES(igprof-analyse ${CMAKE_DL_LIBS})
+ENDIF()
 INSTALL(TARGETS igprof igprof-analyse
 	RUNTIME DESTINATION bin
 	LIBRARY DESTINATION lib
