Preliminary ARM support.
- IgProf should now build and work on ARMv7 platforms. This has been
  tested only on ODroid-U2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,19 @@ ELSE(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
 
 ENDIF(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
 
+# ARM Check if arm CCNT instruction is allowed
+IF(${CMAKE_SYSTEM_PROCESSOR} MATCHES arm)
+  TRY_RUN(RUN_RESULT_VAR COMPILE_RESULT_VAR
+    ${CMAKE_BINARY_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/test_user_ccnt.c)
+  IF(${RUN_RESULT_VAR})
+    SET(USER_CCNT TRUE CACHE BOOL "Whether CCNT instruction is available")
+    MESSAGE("${RUN_RESULT_VAR}")
+  ELSE()
+    SET(USER_CCNT FALSE CACHE BOOL "Whether CCNT instruction is available") 
+  ENDIF()
+ENDIF()
+
 CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/config.h.cmake
   ${CMAKE_CURRENT_SOURCE_DIR}/src/config.h)
 
@@ -56,7 +69,7 @@ IF(UNIX)
   SET(IGPROF_LIBS ${IGPROF_LIBS} ${CMAKE_DL_LIBS})
 ENDIF()
 
-IF(${CMAKE_SYSTEM_PROCESSOR} MATCHES 64)
+IF(${CMAKE_SYSTEM_PROCESSOR} MATCHES 64 OR ${CMAKE_SYSTEM_PROCESSOR} MATCHES arm)
   FIND_PATH(UNWIND_INCLUDE_DIR libunwind.h)
   FIND_LIBRARY(UNWIND_LIBRARY NAMES unwind)
 ENDIF()
