Make pcre really optional.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,13 @@ ELSE(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
   FIND_LIBRARY(PCRE_LIBRARY NAMES pcre
                PATHS /usr/lib /usr/local/lib)
 
-  SET(PCRE_LIBRARIES ${PCRE_LIBRARY})
 
-  IF(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
-    SET(PCRE_FOUND BOOL TRUE)
-  ELSE(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
-    SET(PCRE_FOUND BOOL FALSE)
-  ENDIF(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
+  IF(PCRE_INCLUDE_DIR AND PCRE_LIBRARY)
+    SET(PCRE_LIBRARIES ${PCRE_LIBRARY})
+    SET(PCRE_FOUND TRUE)
+  ELSE(PCRE_INCLUDE_DIR AND PCRE_LIBRARY)
+    SET(PCRE_FOUND FALSE)
+  ENDIF(PCRE_INCLUDE_DIR AND PCRE_LIBRARY)
 
 ENDIF(PCRE_INCLUDE_DIR AND PCRE_LIBRARIES)
 
