--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y libpcre3-dev 
   - sudo apt-get install -y libunwind8-dev
+  - sudo apt-get install -y libpapi-dev
   
 install: cmake -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-g -O3 -U_FORTIFY_SOURCE" . && sudo make install
 script: igprof -o ls.gz -mp ls && igprof-analyse -r MEM_TOTAL ls.gz
